--- a/index.html
+++ b/index.html
@@ -7754,11 +7754,11 @@
   <!--IMAGE END-->
 </body>
 <style>
-  #post-16996 .header-image {
+.header-image {
     margin: 0px 0px 0px 5px;
     z-index: 200;
 } 
-#post-16996 body{
+body{
     background-color: #315734;
     color: #faebd2;
     position: relative;
@@ -7766,7 +7766,7 @@
     padding: 0;
     overflow: hidden;
 }
-#post-16996 svg{
+svg{
     position: absolute;
     bottom: 0;
     left: 60px;
@@ -7776,13 +7776,13 @@
     width: 100%;
 }
 @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;500;600&family=Poppins:wght@300;400;500;600;700&display=swap');
-#post-16996 *{
+*{
   margin: 0;
   padding: 0;
   box-sizing: border-box;
   font-family: 'Playfair Dispair', sans-serif;
 }
-#post-16996 .sidebar{
+.sidebar{
   position: fixed;
   top: 78px;
   left: 0;
@@ -7793,35 +7793,35 @@
   transition: all 0.5s ease;
   overflow: scroll;
 }
-#post-16996 .sidebar::-webkit-scrollbar{
+.sidebar::-webkit-scrollbar{
   width: 15px;
 }
-#post-16996 .sidebar::-webkit-scrollbar-track{
+.sidebar::-webkit-scrollbar-track{
   background: #315734;
 }
-#post-16996 .sidebar::-webkit-scrollbar-thumb{
+.sidebar::-webkit-scrollbar-thumb{
   background: #3a5b3d;
 }
-#post-16996 .sidebar::-webkit-scrollbar-thumb:hover{
+.sidebar::-webkit-scrollbar-thumb:hover{
   background: #faebd2;
 }
-#post-16996 .sidebar::-webkit-scrollbar-button{
+.sidebar::-webkit-scrollbar-button{
   background-color: #faebd2;
   color: #315734;
 }
-#post-16996 .sidebar.close::-webkit-scrollbar{
+.sidebar.close::-webkit-scrollbar{
   display: none;
 }
-#post-16996 .sidebar.close{
+.sidebar.close{
   width: 78px;
 }
-#post-16996 .sidebar .logo-details{
+.sidebar .logo-details{
   height: 60px;
   width: 100%;
   display: flex;
   align-items: center;
 }
-#post-16996 .sidebar .logo-details i{
+.sidebar .logo-details i{
   font-size: 30px;
   color: #faebd2;
   height: 50px;
@@ -7829,46 +7829,46 @@
   text-align: center;
   line-height: 50px;
 }
-#post-16996 .sidebar .logo-details .logo_name{
+.sidebar .logo-details .logo_name{
   font-size: 22px;
   color: #faebd2;
   font-weight: 600;
   transition: 0.3s ease;
   transition-delay: 0.1s;
 }
-#post-16996 .sidebar.close .logo-details .logo_name{
+.sidebar.close .logo-details .logo_name{
   transition-delay: 0s;
   opacity: 0;
   pointer-events: none;
 }
-#post-16996 .sidebar .nav-links{
+.sidebar .nav-links{
   height: 100%;
   padding: 30px 0 150px 0;
   overflow: auto;
 }
-#post-16996 .sidebar.close .nav-links{
+.sidebar.close .nav-links{
   overflow: visible;
 }
-#post-16996 .sidebar .nav-links::-webkit-scrollbar{
+.sidebar .nav-links::-webkit-scrollbar{
   display: none;
 }
-#post-16996 .sidebar .nav-links li{
+.sidebar .nav-links li{
   position: relative;
   list-style: none;
   transition: all 0.4s ease;
 }
-#post-16996 .sidebar .nav-links li:hover{
+.sidebar .nav-links li:hover{
   background: #3a5b3d;
 }
-#post-16996 .sidebar .nav-links li .iocn-link{
+.sidebar .nav-links li .iocn-link{
   display: flex;
   align-items: center;
   justify-content: space-between;
 }
-#post-16996 .sidebar.close .nav-links li .iocn-link{
+.sidebar.close .nav-links li .iocn-link{
   display: block
 }
-#post-16996 .sidebar .nav-links li i{
+.sidebar .nav-links li i{
   height: 50px;
   min-width: 78px;
   text-align: center;
@@ -7878,37 +7878,37 @@
   cursor: pointer;
   transition: all 0.3s ease;
 }
-#post-16996 .sidebar .nav-links li.showMenu i.arrow{
+.sidebar .nav-links li.showMenu i.arrow{
   transform: rotate(-180deg);
 }
-#post-16996 .sidebar.close .nav-links i.arrow{
+.sidebar.close .nav-links i.arrow{
   display: none;
 }
-#post-16996 .sidebar .nav-links li a{
+.sidebar .nav-links li a{
   display: flex;
   align-items: center;
   text-decoration: none;
 }
-#post-16996 .sidebar .nav-links li a .link_name{
+.sidebar .nav-links li a .link_name{
   font-size: 18px;
   font-weight: 400;
   color: #faebd2;
   transition: all 0.4s ease;
 }
-#post-16996 .sidebar.close .nav-links li a .link_name{
+.sidebar.close .nav-links li a .link_name{
   opacity: 0;
   pointer-events: none;
 }
-#post-16996 .sidebar .nav-links li .sub-menu{
+.sidebar .nav-links li .sub-menu{
   padding: 6px 6px 14px 80px;
   margin-top: -10px;
   background: #3a5b3d;
   display: none;
 }
-#post-16996 .sidebar .nav-links li.showMenu .sub-menu{
+.sidebar .nav-links li.showMenu .sub-menu{
   display: block;
 }
-#post-16996 .sidebar .nav-links li .sub-menu a{
+.sidebar .nav-links li .sub-menu a{
   color: #faebd2;
   font-size: 15px;
   padding: 5px 0;
@@ -7916,13 +7916,13 @@
   opacity: 0.6;
   transition: all 0.3s ease;
 }
-#post-16996 .sidebar.close .nav-links li .sub-menu a{
+.sidebar.close .nav-links li .sub-menu a{
   white-space: nowrap;
 }
-#post-16996 .sidebar .nav-links li .sub-menu a:hover{
+.sidebar .nav-links li .sub-menu a:hover{
   opacity: 1;
 }
-#post-16996 .sidebar.close .nav-links li .sub-menu{
+.sidebar.close .nav-links li .sub-menu{
   position: absolute;
   left: 100%;
   top: -10px;
@@ -7934,35 +7934,35 @@
   pointer-events: none;
   transition: 0s;
 }
-#post-16996 .sidebar.close .nav-links li:hover .sub-menu{
+.sidebar.close .nav-links li:hover .sub-menu{
   top: 0;
   opacity: 1;
   pointer-events: auto;
   transition: all 0.4s ease;
 }
-#post-16996 .sidebar .nav-links li .sub-menu .link_name{
+.sidebar .nav-links li .sub-menu .link_name{
   display: none;
 }
-#post-16996 .sidebar.close .nav-links li .sub-menu .link_name{
+.sidebar.close .nav-links li .sub-menu .link_name{
   font-size: 18px;
   opacity: 1;
   display: block;
 }
-#post-16996 .sidebar .nav-links li .sub-menu.blank{
+.sidebar .nav-links li .sub-menu.blank{
   opacity: 1;
   pointer-events: auto;
   padding: 3px 20px 6px 16px;
   opacity: 0;
   pointer-events: none;
 }
-#post-16996 .sidebar .nav-links li:hover .sub-menu.blank{
+.sidebar .nav-links li:hover .sub-menu.blank{
   top: 50%;
   transform: translateY(-50%);
 }
-#post-16996 .sidebar.close .wrapper{
+.sidebar.close .wrapper{
   display: none;
 }
-#post-16996 .sidebar .filter-btn{
+.sidebar .filter-btn{
   font-size: smaller;
   border: 2px solid #faebd2;
   padding: 0.5em 1em;
@@ -7971,27 +7971,27 @@
   color: #faebd2;
   cursor: pointer;
 }
-#post-16996 .sidebar .filter-btn:focus{
+.sidebar .filter-btn:focus{
   background-color: #faebd2;
   color: #315734;
 }
-#post-16996 .sidebar .filter-btn:hover{
+.sidebar .filter-btn:hover{
   background-color: #faebd2;
   color: #315734;
 }
-#post-16996 .sidebar .wrapper .filter-btns{
+.sidebar .wrapper .filter-btns{
   overflow: auto;
 }
-#post-16996 .sidebar .wrapper .filter-btns::-webkit-scrollbar{
+.sidebar .wrapper .filter-btns::-webkit-scrollbar{
   display: none;
 }
-#post-16996 .sidebar .wrapper .filter-btns td{
+.sidebar .wrapper .filter-btns td{
   width: 300px;
   height: 40px;
   position: relative;
   transition: all 0.4s ease;
 }
-#post-16996 .home-section{
+.home-section{
   position: relative;
   background: #315734;
   height: 100vh;
@@ -7999,52 +7999,52 @@
   width: calc(100% - 260px);
   transition: all 0.5s ease;
 }
-#post-16996 .sidebar.close ~ .home-section{
+.sidebar.close ~ .home-section{
   left: 78px;
   width: calc(100% - 78px);
 }
-#post-16996 .home-section .home-content{
+.home-section .home-content{
   height: 60px;
   display: flex;
   align-items: center;
 }
-#post-16996 .home-section .home-content .bx-menu{
+.home-section .home-content .bx-menu{
     z-index: 200;
     color: #315734;
     font-size: 35px;
 }
-#post-16996 .home-section .home-content .text{
+.home-section .home-content .text{
   color: #315734;
   font-size: 35px;
 }
-#post-16996 .home-section .home-content .bx-menu{
+.home-section .home-content .bx-menu{
   margin: 0 15px;
   cursor: pointer;
 }
 @media (max-width: 400px) {
-  #post-16996 .sidebar.close .nav-links li .sub-menu{
+.sidebar.close .nav-links li .sub-menu{
     display: none;
   }
-  #post-16996 .sidebar{
+.sidebar{
     width: 78px;
   }
-  #post-16996 .sidebar.close{
+.sidebar.close{
     width: 0;
   }
-  #post-16996 .home-section{
+.home-section{
     left: 78px;
     width: calc(100% - 78px);
     z-index: 100;
   }
-  #post-16996 .sidebar.close ~ .home-section{
+.sidebar.close ~ .home-section{
     width: 100%;
     left: 0;
   }
 }
-#post-16996 .map-image{
+.map-image{
     margin: 0px 0px 0px 80px;
 }
-#post-16996 .hide{
+.hide{
     background-color: #faebd2;
     color: #315734;
     border-radius: 10px;
@@ -8056,7 +8056,7 @@
     padding: 20px;
     z-index: 100;
 }
-#post-16996 button{
+.button{
     left: 45px;
     font-size: 45px;
     font-weight: 600;
@@ -8067,23 +8067,23 @@
     position: absolute;
     display: inline-block;
 }
-#post-16996 .info-header{
+.info-header{
   width: 100%;
   position: relative;
   z-index: 100;
 }
-#post-16996 .info-wrapper{
+.info-wrapper{
   display: flex;
   flex-direction: row;
   margin-top: 15px;
 }
-#post-16996 .carousel-container{
+.carousel-container{
   position: relative;
   margin: auto;
   width: 400px;
   float: left;
 }
-#post-16996 .prev, .next{
+.prev, .next{
   cursor: pointer;
   position: absolute;
   top: 50%;
@@ -8098,18 +8098,18 @@
   border-radius: 0 3px 3px 0;
   user-select: none;
 }
-#post-16996 .prev{
+.prev{
   left: 0;
   border-radius: 0 3px 3px 0;
 }
-#post-16996 .next{
+.next{
   right: 0;
   border-radius: 3px 0 0 3px;
 }
-#post-16996 .prev:hover, .next:hover{
+.prev:hover, .next:hover{
   background-color: #faebd2;
 }
-#post-16996 .caption-text{
+.caption-text{
   color: #315734;
   background-color: #faebd29c;
   font-size: 15px;
@@ -8120,7 +8120,7 @@
   text-align: center;
   font-family: 'Poppins';
 }
-#post-16996 .numbertext{
+.numbertext{
   color: #315734;
   font-size: 12px;
   padding: 8px 12px;
@@ -8128,11 +8128,11 @@
   top: 0;
   font-family: 'Playfair Dispair', sans-serif;
 }
-#post-16996 .dot-container{
+.dot-container{
   width: 400px;
   left: 0;
 }
-#post-16996 .dot{
+.dot{
   cursor: pointer;
   height: 15px;
   width: 15px;
@@ -8142,10 +8142,10 @@
   display: inline-block;
   transition: background-color 0.6s ease;
 }
-#post-16996 .active, .dot:hover{
+.active, .dot:hover{
   background-color: #315734;
 }
-#post-16996 .fade{
+.fade{
   animation-name: fade;
   animation-duration: 1.5s;
 }
@@ -8153,32 +8153,32 @@
   from {opacity: .4;}
   to {opacity: 1;}
 }
-#post-16996 .carousel-dots-wrapper{
+.carousel-dots-wrapper{
   display: flex;
   flex-direction: column;
 }
-#post-16996 .right-container{
+.right-container{
   display: flex;
   flex-direction: column;
   width: 650px;
   align-items: center;
 }
-#post-16996 .right-container .description{
+.right-container .description{
   text-align: justify;
   top: 0;
   margin-top: 0;
 }
-#post-16996 .right-container .description h2{
+.right-container .description h2{
   font-family: 'Playfair Display';
   color: #315734;
   font-weight: bold;
 }
-#post-16996 .right-container .description p{
+.right-container .description p{
   font-family: 'Poppins';
   color: rgb(27, 27, 27);
   font-size: 14px;
 }
-#post-16996 .right-container .description button{
+.right-container .description button{
   background-color: transparent;
   color: #315734;
   font-family: 'Poppins';
@@ -8186,12 +8186,12 @@
   text-decoration: underline #315734;
   font-size: medium;
 }
-#post-16996 .right-container .blueprints{
+.right-container .blueprints{
   width: 600px;
   visibility: collapse;
   display: none;
 }
-#post-16996 .right-container .blueprints button{
+.right-container .blueprints button{
   width: 550px;
   background-color: #315734;
   color: #faebd2;
@@ -8202,86 +8202,86 @@
   visibility: collapse;
   display: none;
 }
-#post-16996 .services-related-container{
+.services-related-container{
   display: flex;
   flex-direction: row;
   margin: 15px;
   width: 585;
   align-self: self-start;
 }
-#post-16996 .services{
+.services{
   height: 250px;
   text-align: justify;
   width: 400px;
   float: left;
 }
-#post-16996 .services ul{
+.services ul{
   overflow-y: scroll;
   width: 375px;
   height: 225px;
   list-style-position: outside;
   padding-right: 18px;
 }
-#post-16996 .services ul::-webkit-scrollbar{
+.services ul::-webkit-scrollbar{
   width: 15px;
 }
-#post-16996 .services ul::-webkit-scrollbar-track{
+.services ul::-webkit-scrollbar-track{
   background: #31573491;
 }
-#post-16996 .services ul::-webkit-scrollbar-thumb{
+.services ul::-webkit-scrollbar-thumb{
   background-color: #315734;
 }
-#post-16996 .services ul::-webkit-scrollbar-button{
+.services ul::-webkit-scrollbar-button{
   display: none;
 }
-#post-16996 .services ul li{
+.services ul li{
   margin-left: 1rem;
 }
-#post-16996 .services h2{
+.services h2{
   font-family: 'Playfair Display';
   color: #315734;
   font-weight: bold;
   float: inline-start;
 }
-#post-16996 .services h4{
+.services h4{
   font-family: 'Playfair Display';
   color: #315734;
 }
-#post-16996 .services h5{
+.services h5{
   font-family: 'Playfair Display';
   color: #315734;
 }
-#post-16996 .services p{
+.services p{
   font-family: 'Poppins';
   color: rgb(27, 27, 27);
   font-size: 14px;
 }
-#post-16996 .related-article{
+.related-article{
   width: 185px;
 }
-#post-16996 .related-article a:link{
+.related-article a:link{
   text-decoration: none;
 }
-#post-16996 .related-article h2{
+.related-article h2{
   font-family: 'Playfair Display';
   color: #315734;
   font-weight: bold;
   float: inline-end;
 }
-#post-16996 .related-article-text h4{
+.related-article-text h4{
   color: #315734;
   font-family: 'Playfair Display';
   text-align: left;
   margin-top: 15px;
 }
-#post-16996 .related-article-text p{
+.related-article-text p{
   color: rgb(27, 27, 27);
   font-family: 'Poppins';
   text-decoration: none;
   font-size: 14px;
   text-align: justify;
 }
-#post-16996 .article-image{
+.article-image{
   width: 210px;
   margin-right: 0;
 }
